# autonomous-ops-platform

./: .env  .env.example  .gitignore  CHANGELOG.md  Main and power.md  Makefile  README.md  README.md_bak  code  pyproject.toml  requirements.txt
app/cli/: __init__.py  diagnose.py  health.py  investigate.py  kubernetes.py  linux.py  main.py  precheck.py  remediate.py
app/config/: logging_config.py  settings.py
app/llm/: client.py  response_validator.py
app/orchestration/: incident_workflow.py  linux_disk_workflow.py
app/schemas/: ai.py  classification.py  incident.py  linux.py  memory.py  metrics.py  workflow.py
backup_readme/: README.md_bak  README.md_v2
docs/: AOP_PRODUCT_VISION.md  AUTONOMOUS_OPS_PLATFORM_MEMORY_LANE.md  KUBERNETES_CLI.md  LINUX_CLI.md  NEW_CHAT_STARTER_PROMPT.md  PROJECT_HANDOVER.md
docs/architecture/: day1-foundation.md  incident-intelligence-workflow.md
docs/builder_journal/: phase-2-hardening.md~
docs/incidents/: day2-imagepullbackoff.md  day3-oomkilled-analysis.md  day5-incident-workflow-demo.md
docs/linux/: LINUX_EXPERTISE_BLUEPRINT.md
docs/setup/: installation.md
kubernetes/monitoring/: prometheus-config.yaml  prometheus-deployment.yaml  (+2 more)
tests/: test_cli.py  test_cross_domain_prompts.py  test_hybrid_search.py  test_incident_classifier.py  test_incident_workflow.py  test_kubernetes_cli.py  test_kubernetes_operations.py  test_linux_cli.py  test_linux_disk_agent.py  test_linux_disk_workflow.py  test_linux_incident_memory.py  test_linux_internals.py  test_linux_investigate_cli.py  test_linux_operations.py  test_llm_client.py
(+63 files in other folders)
